--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,12 +5,13 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Page Title</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link href="./css/mutual.css" rel="stylesheet">
-    <link href="./css/index.css" rel="stylesheet">
+    <link href="/css/mutual.css" rel="stylesheet">
+    <link href="/css/index.css" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.js"></script>
 </head>
 <body>
     <%- include('./templates/header.ejs') %>
+    <p id="index_slogan">Achetez des biens et des services entre particuliers, le tout, en crypto monnaie</p>
     <div id="index_researchDiv">
         <div id="index_researchParamsInputDiv">
             <input type="text" placeholder="Que recherchez-vous ?" class="index_researchArea">
