--- a/views/templates/header.ejs
+++ b/views/templates/header.ejs
@@ -1,4 +1,5 @@
-<link rel="stylesheet" href="./css/header.css">
+<link rel="stylesheet" href="/css/header.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.js"></script>
 <header id="header_header">
     <div id="header_titleDiv">
         <h1 id="header_title">Affaires Crypto</h1>
@@ -18,10 +19,11 @@
             <img src="../assets/ico/header_message.svg" id="header_messages_ico" class="header_ico">
             <p id="header_messages_text" class="header_text">Messages</p>
         </div>
-        <div>
+        <div id="header_profileDiv">
             <img src="../assets/ico/header_profilePicture.svg" id="header_profilePicture_ico" class="header_ico">
             <p class="header_text">Compte</p>
         </div>
     </div>
 </header>
+<script src="../js/header.js"></script>
 <hr>
