--- a/views/templates/header.ejs
+++ b/views/templates/header.ejs
@@ -1,5 +1,6 @@
 <link rel="stylesheet" href="/css/header.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.js"></script>
+<link href="/css/mutual.css" rel="stylesheet">
 <header id="header_header">
     <div id="header_titleDiv">
         <h1 id="header_title">Affaires Crypto</h1>
