--- a/views/login.ejs
+++ b/views/login.ejs
@@ -12,7 +12,7 @@
     <div id="login_globalDiv" class="centerItem">
         <p id="login_title" class="centerItem">Veuillez vous connecter</p>
         <form id="login_form" action="login" method="post" name="form">
-            <input type="text" placeholder="Email/Pseudo" name="pseudo" class="centerItem" id="login_pseudoInput" required>
+            <input type="text" placeholder="Email/Pseudo" name="id" class="centerItem" id="login_pseudoInput" required>
             <input type="password" placeholder="Mot de passe" name="password" class="centerItem" id="login_passwordInput">
         </form>
         <button class="centerItem" id="login_validateButton">Valider</button>
