--- a/views/register.ejs
+++ b/views/register.ejs
@@ -44,6 +44,7 @@
             <button id="register_validateButton">Valider</button>
         </div>
     </div>
+    <p onclick="document.location = '/login'">Me connecter</p>
     <script src="./js/register.js"></script>
 </body>
 </html>
