--- a/views/compte.ejs
+++ b/views/compte.ejs
@@ -21,13 +21,12 @@
                 <p id="compte_rate"><%= rate %>/5</p>
             <% } %>
         </div>
-        
-        <div style="grid-column: 5;grid-row: 1/3;" id="compte_emailAndPhoneDIV">
-            <div class="compte_infoDiv">
+        <div id="compte_infoDivDiv">
+            <div class="compte_infoDiv" style="grid-row: 1;">
                 <p class="compte_infoText">Email:</p>
                 <p class="compte_infoState">Privé</p>
             </div>
-            <div class="compte_infoDiv">
+            <div class="compte_infoDiv" style="grid-row: 2;">
                 <p class="compte_infoText">Téléphone:</p>
                 <% if(phone_number == undefined){ %>
                     <p class="compte_infoState">Non renseigné</p>
