--- a/views/editAccount/edit-my-account.ejs
+++ b/views/editAccount/edit-my-account.ejs
@@ -13,7 +13,10 @@
         <button class="edit_navButton">Personnaliser</button>
     </div>
     <div id="edit_content">
-
+        <div id="edit_changePseudoDiv">
+            <input type="text">
+            <img src="/assets/img/brush.png" id="edit_changePseudoValidate">
+        </div>
     </div>
 
     <script src="/js/edit-my-account.js"></script>
