--- a/views/css/compte.css
+++ b/views/css/compte.css
@@ -83,7 +83,7 @@
     bottom: 0px;
     left: 50%;
     transform: translateX(-50%);
-    background-color: #4180f5;
+    background-color: var(--buttonColor2);
     border: solid 1px grey;
     font-size: 16px;
     border-radius: 20px;
