starting message part

--- a/views/templates/header.ejs
+++ b/views/templates/header.ejs
@@ -12,11 +12,11 @@
         </button>
     </div>
     <div id="header_navButton">
-        <div>
+        <div id="header_favoriteDiv">
             <img src="../assets/ico/header_favorite.svg" id="header_favorite_ico" class="header_ico">
             <p class="header_text">favoris</p>
         </div>
-        <div>
+        <div id="header_messageDiv">
             <img src="../assets/ico/header_message.svg" id="header_messages_ico" class="header_ico">
             <p id="header_messages_text" class="header_text">Messages</p>
         </div>
